fix sublte issus with content wrapping

--- a/style.css
+++ b/style.css
@@ -33,6 +33,8 @@ img.logo{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    flex-shrink: 1;
+    flex-basis: auto;
     align-items: center;
     gap: 32px;
     margin: 32px;
@@ -69,6 +71,10 @@ img.logo{
 img{
     height: 300px;
     border-radius: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-shrink: 1;
 }
 
 .third-s{
